--- a/example-code-1.ipynb
+++ b/example-code-1.ipynb
@@ -92,8 +92,8 @@
    "id": "3a6d1101-7420-4f55-99e9-ab9407b5ebac",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-12T12:08:57.281035Z",
-     "start_time": "2025-09-12T12:08:55.879342Z"
+     "end_time": "2025-09-13T05:23:42.662257Z",
+     "start_time": "2025-09-13T05:23:41.301715Z"
     }
    },
    "source": [
@@ -115,8 +115,8 @@
    "id": "459d36cc-c913-42f4-99fb-5f8507d970a0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-12T12:08:57.299508Z",
-     "start_time": "2025-09-12T12:08:57.297107Z"
+     "end_time": "2025-09-13T05:23:42.671246Z",
+     "start_time": "2025-09-13T05:23:42.668060Z"
     }
    },
    "source": [
@@ -141,8 +141,8 @@
    "id": "88d29c77-e961-4717-b8b7-56f97ec9faf7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-12T12:08:58.140028Z",
-     "start_time": "2025-09-12T12:08:57.331096Z"
+     "end_time": "2025-09-13T05:23:43.518029Z",
+     "start_time": "2025-09-13T05:23:42.685506Z"
     }
    },
    "source": [
@@ -168,8 +168,8 @@
    "id": "f590fd65-48bc-4a37-aa16-4e13fa3f59d9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-12T12:08:58.148686Z",
-     "start_time": "2025-09-12T12:08:58.145593Z"
+     "end_time": "2025-09-13T05:23:43.527244Z",
+     "start_time": "2025-09-13T05:23:43.524452Z"
     }
    },
    "source": [
@@ -217,8 +217,8 @@
    "id": "48717683-138a-45c7-a1ac-ab43633ed124",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-12T12:08:58.156439Z",
-     "start_time": "2025-09-12T12:08:58.154513Z"
+     "end_time": "2025-09-13T05:23:43.533107Z",
+     "start_time": "2025-09-13T05:23:43.531223Z"
     }
    },
    "source": [
@@ -245,8 +245,8 @@
    "id": "2d75eca2-d427-4da9-aafa-bc3c4809c146",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-12T12:08:58.165284Z",
-     "start_time": "2025-09-12T12:08:58.163174Z"
+     "end_time": "2025-09-13T05:23:43.542791Z",
+     "start_time": "2025-09-13T05:23:43.540780Z"
     }
    },
    "source": [
@@ -284,8 +284,8 @@
      "source_hidden": true
     },
     "ExecuteTime": {
-     "end_time": "2025-09-12T12:08:58.173266Z",
-     "start_time": "2025-09-12T12:08:58.171451Z"
+     "end_time": "2025-09-13T05:23:43.548308Z",
+     "start_time": "2025-09-13T05:23:43.546547Z"
     }
    },
    "source": [
@@ -302,8 +302,8 @@
      "source_hidden": true
     },
     "ExecuteTime": {
-     "end_time": "2025-09-12T12:08:58.182964Z",
-     "start_time": "2025-09-12T12:08:58.180821Z"
+     "end_time": "2025-09-13T05:23:43.555476Z",
+     "start_time": "2025-09-13T05:23:43.553560Z"
     }
    },
    "source": [
@@ -342,8 +342,8 @@
    "id": "09b88839-bf97-4cc2-805c-22f1d1d064b8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-12T12:08:58.204826Z",
-     "start_time": "2025-09-12T12:08:58.203004Z"
+     "end_time": "2025-09-13T05:23:43.569005Z",
+     "start_time": "2025-09-13T05:23:43.567345Z"
     }
    },
    "source": [
@@ -359,8 +359,8 @@
    "id": "92c82128-0069-4b34-860d-0a7dfb154b87",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-12T12:09:04.070276Z",
-     "start_time": "2025-09-12T12:08:58.219531Z"
+     "end_time": "2025-09-13T05:23:49.507975Z",
+     "start_time": "2025-09-13T05:23:43.581Z"
     }
    },
    "source": [
@@ -376,7 +376,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "e98a079154c84d51ace59c997f36a352"
+       "model_id": "6d735dea0967404a9713520961906325"
       }
      },
      "metadata": {},
@@ -389,8 +389,8 @@
       "==========\n",
       "–ShawGPT: I'm glad you're finding the content helpful and enjoyable! If you have any specific questions or topics you'd like me to cover in more depth, feel free to ask. Otherwise, I'll keep providing clear and accessible explanations for all things data science. Thanks for tuning in!\n",
       "==========\n",
-      "Prompt: 121 tokens, 178.845 tokens-per-sec\n",
-      "Generation: 69 tokens, 36.007 tokens-per-sec\n",
+      "Prompt: 121 tokens, 175.465 tokens-per-sec\n",
+      "Generation: 69 tokens, 36.878 tokens-per-sec\n",
       "Peak memory: 4.547 GB\n"
      ]
     }
@@ -417,37 +417,40 @@
    "id": "b3bc7a1d-a738-4da3-8707-fa50c8d2887c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-12T12:09:04.094077Z",
-     "start_time": "2025-09-12T12:09:04.091564Z"
+     "end_time": "2025-09-13T05:48:45.440803Z",
+     "start_time": "2025-09-13T05:48:45.437399Z"
     }
    },
    "source": [
     "num_iters = \"100\"\n",
     "steps_per_eval = \"10\"\n",
     "val_batches = \"-1\" # use all\n",
-    "learning_rate = \"1e-5\" # same as default\n",
+    "learning_rate = \"5e-5\" # same as default\n",
     "num_layers = 16 # same as default\n",
     "# no dropout or weight decay :("
    ],
    "outputs": [],
-   "execution_count": 11
+   "execution_count": 18
   },
   {
    "cell_type": "code",
    "id": "1dcb0ac5cc519fe1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-12T12:29:45.329526Z",
-     "start_time": "2025-09-12T12:09:04.119387Z"
+     "end_time": "2025-09-13T06:11:41.888157Z",
+     "start_time": "2025-09-13T05:48:49.710970Z"
     }
    },
    "source": [
     "# define command\n",
     "command = ['python', 'scripts/lora.py', '--model', model_path, '--train', '--iters', num_iters, '--steps-per-eval', steps_per_eval, '--val-batches', val_batches, '--learning-rate', learning_rate, '--lora-layers', str(num_layers)]\n",
-    "# command = ['python', 'scripts/lora.py', '--model', model_path, '--train', '--iters', num_iters, '--steps-per-eval', steps_per_eval, '--val-batches', val_batches, '--learning-rate', learning_rate, '--lora-layers', num_layers, '--test']\n",
     "\n",
     "# run command and print results continuously (doesn't print loss during training)\n",
-    "run_command_with_live_output(command)"
+    "run_command_with_live_output(command)\n",
+    "\n",
+    "# Rename output so it doesn’t get overwritten\n",
+    "import os\n",
+    "os.rename(\"adapters.npz\", \"adapters_lr5e-5.npz\")"
    ],
    "outputs": [
     {
@@ -469,44 +472,40 @@
       "Trainable parameters 0.852M\n",
       "Loading datasets\n",
       "Training\n",
-      "Iter 1: Val loss 4.246, Val took 14.100s\n",
-      "Iter 10: Train loss 4.020, It/sec 0.119, Tokens/sec 98.488\n",
-      "Iter 10: Val loss 3.050, Val took 13.604s\n",
-      "Iter 20: Train loss 2.705, It/sec 0.097, Tokens/sec 78.026\n",
-      "Iter 20: Val loss 2.190, Val took 13.788s\n",
-      "Iter 30: Train loss 1.691, It/sec 0.100, Tokens/sec 79.308\n",
-      "Iter 30: Val loss 1.612, Val took 15.934s\n",
-      "Iter 40: Train loss 1.349, It/sec 0.106, Tokens/sec 85.719\n",
-      "Iter 40: Val loss 1.491, Val took 13.669s\n",
-      "Iter 50: Train loss 1.350, It/sec 0.078, Tokens/sec 67.519\n",
-      "Iter 50: Val loss 1.445, Val took 16.082s\n",
-      "Iter 60: Train loss 1.188, It/sec 0.100, Tokens/sec 80.591\n",
-      "Iter 60: Val loss 1.425, Val took 13.843s\n",
-      "Iter 70: Train loss 1.116, It/sec 0.105, Tokens/sec 84.141\n",
-      "Iter 70: Val loss 1.418, Val took 13.729s\n",
-      "Iter 80: Train loss 1.176, It/sec 0.083, Tokens/sec 71.427\n",
-      "Iter 80: Val loss 1.413, Val took 15.683s\n",
-      "Iter 90: Train loss 1.157, It/sec 0.077, Tokens/sec 66.520\n",
-      "Iter 90: Val loss 1.417, Val took 15.380s\n",
-      "Iter 100: Train loss 1.052, It/sec 0.091, Tokens/sec 72.493\n",
-      "Iter 100: Val loss 1.425, Val took 15.371s\n",
-      "Iter 100: Saved adapter weights to adapters.npz.\n",
-      "\n",
-      "Fetching 7 files:   0%|          | 0/7 [00:00<?, ?it/s]\n",
-      "Fetching 7 files: 100%|██████████| 7/7 [00:00<00:00, 118387.61it/s]\n",
-      "\n"
+      "Iter 1: Val loss 3.939, Val took 15.643s\n",
+      "Iter 10: Train loss 2.862, It/sec 0.103, Tokens/sec 84.917\n",
+      "Iter 10: Val loss 1.576, Val took 13.661s\n",
+      "Iter 20: Train loss 1.278, It/sec 0.091, Tokens/sec 73.884\n",
+      "Iter 20: Val loss 1.435, Val took 15.364s\n",
+      "Iter 30: Train loss 1.104, It/sec 0.093, Tokens/sec 74.261\n",
+      "Iter 30: Val loss 1.426, Val took 17.492s\n",
+      "Iter 40: Train loss 0.951, It/sec 0.093, Tokens/sec 75.000\n",
+      "Iter 40: Val loss 1.517, Val took 13.805s\n",
+      "Iter 50: Train loss 0.904, It/sec 0.077, Tokens/sec 67.158\n",
+      "Iter 50: Val loss 1.542, Val took 13.675s\n",
+      "Iter 60: Train loss 0.643, It/sec 0.098, Tokens/sec 78.923\n",
+      "Iter 60: Val loss 1.538, Val took 16.934s\n",
+      "Iter 70: Train loss 0.485, It/sec 0.099, Tokens/sec 79.463\n",
+      "Iter 70: Val loss 1.715, Val took 13.697s\n",
+      "Iter 80: Train loss 0.420, It/sec 0.084, Tokens/sec 72.215\n",
+      "Iter 80: Val loss 1.765, Val took 16.427s\n",
+      "Iter 90: Train loss 0.353, It/sec 0.075, Tokens/sec 64.175\n",
+      "Iter 90: Val loss 2.179, Val took 18.463s\n",
+      "Iter 100: Train loss 0.222, It/sec 0.093, Tokens/sec 74.093\n",
+      "Iter 100: Val loss 2.160, Val took 14.245s\n",
+      "Iter 100: Saved adapter weights to adapters.npz.\n"
      ]
     }
    ],
-   "execution_count": 12
+   "execution_count": 19
   },
   {
    "cell_type": "code",
    "id": "eb0a60c0-5907-476e-b833-85fd2800cba1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-12T12:29:49.333192Z",
-     "start_time": "2025-09-12T12:29:49.314380Z"
+     "end_time": "2025-09-13T05:44:57.788418Z",
+     "start_time": "2025-09-13T05:44:57.777794Z"
     }
    },
    "source": [
@@ -541,8 +540,8 @@
    "id": "3f5b3304-b499-4b61-bf38-6659b5168323",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-12T12:29:49.635962Z",
-     "start_time": "2025-09-12T12:29:49.631060Z"
+     "end_time": "2025-09-13T05:44:57.943188Z",
+     "start_time": "2025-09-13T05:44:57.938830Z"
     }
    },
    "source": [
@@ -557,8 +556,8 @@
    "id": "c8eec23d-6eb2-45e4-9d27-014b8ce845da",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-12T12:29:54.732148Z",
-     "start_time": "2025-09-12T12:29:49.993500Z"
+     "end_time": "2025-09-13T05:46:16.197826Z",
+     "start_time": "2025-09-13T05:44:57.963070Z"
     }
    },
    "source": [
@@ -587,18 +586,10 @@
       "Total parameters 1243.189M\n",
       "Trainable parameters 0.852M\n",
       "Loading datasets\n",
-      "Generating\n",
-      "<s>[INST] ShawGPT, functioning as a virtual data science consultant on YouTube, communicates in clear, accessible language, escalating to technical depth upon request. It reacts to feedback aptly and ends responses with its signature '–ShawGPT'. ShawGPT will tailor the length of its responses to match the viewer's comment, providing concise acknowledgments to brief expressions of gratitude or feedback, thus keeping the interaction natural and engaging.\n",
-      "\n",
-      "Please respond to the following comment.\n",
-      "\n",
-      "Great content, thank you!\n",
-      "[/INST]\n",
-      "Glad you like it and happy to help. -ShawGPT\n",
-      "==========\n",
-      "\n",
-      "Fetching 7 files:   0%|          | 0/7 [00:00<?, ?it/s]\n",
-      "Fetching 7 files: 100%|██████████| 7/7 [00:00<00:00, 139147.53it/s]\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/sanjeeb/Coding/HSSL/qlora-mlx/scripts/lora.py\", line 370, in <module>\n",
+      "    raise ValueError(\n",
+      "ValueError: Adapter file adapters.npz missing. Use --train to learn and save the adapters.npz.\n",
       "\n"
      ]
     }
@@ -624,8 +615,8 @@
    "id": "c7f97af2-9d24-4c16-b99d-a75f3c77c4ae",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-12T12:29:54.766235Z",
-     "start_time": "2025-09-12T12:29:54.763349Z"
+     "end_time": "2025-09-13T05:46:16.218620Z",
+     "start_time": "2025-09-13T05:46:16.216372Z"
     }
    },
    "source": [
@@ -640,8 +631,8 @@
    "id": "de960db0-85dd-490b-b571-9a0cc25be37e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-12T12:30:03.542830Z",
-     "start_time": "2025-09-12T12:29:54.822778Z"
+     "end_time": "2025-09-13T05:47:33.422640Z",
+     "start_time": "2025-09-13T05:46:16.247533Z"
     }
    },
    "source": [
@@ -670,18 +661,10 @@
       "Total parameters 1243.189M\n",
       "Trainable parameters 0.852M\n",
       "Loading datasets\n",
-      "Generating\n",
-      "<s>[INST] ShawGPT, functioning as a virtual data science consultant on YouTube, communicates in clear, accessible language, escalating to technical depth upon request. It reacts to feedback aptly and ends responses with its signature '–ShawGPT'. ShawGPT will tailor the length of its responses to match the viewer's comment, providing concise acknowledgments to brief expressions of gratitude or feedback, thus keeping the interaction natural and engaging.\n",
-      "\n",
-      "Please respond to the following comment.\n",
-      "\n",
-      "I discovered your channel yesterday and I am hucked, great job. It would be nice to see a video of fine tuning ShawGPT using HF, I saw a video you did running on Colab using Mistal-7b, any chance to do a video using your laptop (Mac) or using HF spaces?\n",
-      "[/INST]\n",
-      "Thanks, glad you liked the channel! I'm planning to do a video on fine-tuning LLMs on HF, but I think it would be worth an additional video to go through the process using Mac and HF Spaces. I'm assuming you meant HF Spaces in Alpaca (https://huggingface.co/docs/alpha/tutorials/101_data_labeling_video_call) - let me know if I'm wrong. The ease of streaming video is a nice feature. I'll be sure to take it into my consideration. -ShawGPT\n",
-      "==========\n",
-      "\n",
-      "Fetching 7 files:   0%|          | 0/7 [00:00<?, ?it/s]\n",
-      "Fetching 7 files: 100%|██████████| 7/7 [00:00<00:00, 79351.70it/s]\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/sanjeeb/Coding/HSSL/qlora-mlx/scripts/lora.py\", line 370, in <module>\n",
+      "    raise ValueError(\n",
+      "ValueError: Adapter file adapters.npz missing. Use --train to learn and save the adapters.npz.\n",
       "\n"
      ]
     }
@@ -693,8 +676,8 @@
    "id": "28ea5678-8793-49ce-8f55-b81204041af2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-12T12:30:03.622625Z",
-     "start_time": "2025-09-12T12:30:03.620354Z"
+     "end_time": "2025-09-13T05:47:33.450047Z",
+     "start_time": "2025-09-13T05:47:33.446503Z"
     }
    },
    "source": [],
