--- a/example-code-2.ipynb
+++ b/example-code-2.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-14T01:58:33.518087Z",
-     "start_time": "2025-09-14T01:58:33.515170Z"
+     "end_time": "2025-09-14T02:07:41.489797Z",
+     "start_time": "2025-09-14T02:07:41.487239Z"
     }
    },
    "cell_type": "code",
@@ -14,15 +14,15 @@
    ],
    "id": "34e605c01f8971c3",
    "outputs": [],
-   "execution_count": 26
+   "execution_count": 33
   },
   {
    "cell_type": "code",
    "id": "88d29c77-e961-4717-b8b7-56f97ec9faf7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-13T12:44:25.488001Z",
-     "start_time": "2025-09-13T12:44:22.520124Z"
+     "end_time": "2025-09-14T02:07:41.504376Z",
+     "start_time": "2025-09-14T02:07:41.502213Z"
     }
    },
    "source": [
@@ -30,7 +30,7 @@
     "from mlx_lm import load, generate"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 34
   },
   {
    "cell_type": "markdown",
@@ -48,8 +48,8 @@
    "id": "f590fd65-48bc-4a37-aa16-4e13fa3f59d9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-13T12:44:25.502796Z",
-     "start_time": "2025-09-13T12:44:25.499895Z"
+     "end_time": "2025-09-14T02:07:41.514438Z",
+     "start_time": "2025-09-14T02:07:41.511403Z"
     }
    },
    "source": [
@@ -80,7 +80,7 @@
     "        print(err_output)"
    ],
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 35
   },
   {
    "metadata": {},
@@ -97,8 +97,8 @@
    "id": "48717683-138a-45c7-a1ac-ab43633ed124",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-13T12:44:25.511995Z",
-     "start_time": "2025-09-13T12:44:25.509937Z"
+     "end_time": "2025-09-14T02:07:41.521744Z",
+     "start_time": "2025-09-14T02:07:41.519679Z"
     }
    },
    "source": [
@@ -107,7 +107,7 @@
     "    return str(command).replace(\"'\",\"\").replace(\"[\",\"\").replace(\"]\",\"\").replace(\",\",\"\")"
    ],
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 36
   },
   {
    "metadata": {},
@@ -125,8 +125,8 @@
    "id": "2d75eca2-d427-4da9-aafa-bc3c4809c146",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-13T12:44:25.521568Z",
-     "start_time": "2025-09-13T12:44:25.519327Z"
+     "end_time": "2025-09-14T02:07:41.530396Z",
+     "start_time": "2025-09-14T02:07:41.528428Z"
     }
    },
    "source": [
@@ -142,7 +142,7 @@
     "prompt_builder = lambda comment: f'''<s>[INST] {intstructions_string} \\n{comment} \\n[/INST]\\n'''"
    ],
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 37
   },
   {
    "cell_type": "markdown",
@@ -164,15 +164,15 @@
      "source_hidden": true
     },
     "ExecuteTime": {
-     "end_time": "2025-09-13T12:44:25.531295Z",
-     "start_time": "2025-09-13T12:44:25.529311Z"
+     "end_time": "2025-09-14T02:07:41.537007Z",
+     "start_time": "2025-09-14T02:07:41.535109Z"
     }
    },
    "source": [
     "hf_model_path = \"mistralai/Mistral-7B-Instruct-v0.2\""
    ],
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 38
   },
   {
    "cell_type": "code",
@@ -182,8 +182,8 @@
      "source_hidden": true
     },
     "ExecuteTime": {
-     "end_time": "2025-09-13T12:44:25.544637Z",
-     "start_time": "2025-09-13T12:44:25.542703Z"
+     "end_time": "2025-09-14T02:07:41.543384Z",
+     "start_time": "2025-09-14T02:07:41.541461Z"
     }
    },
    "source": [
@@ -202,7 +202,7 @@
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 39
   },
   {
    "cell_type": "markdown",
@@ -222,8 +222,8 @@
    "id": "09b88839-bf97-4cc2-805c-22f1d1d064b8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-13T12:44:25.562988Z",
-     "start_time": "2025-09-13T12:44:25.560951Z"
+     "end_time": "2025-09-14T02:07:41.555937Z",
+     "start_time": "2025-09-14T02:07:41.553865Z"
     }
    },
    "source": [
@@ -232,15 +232,15 @@
     "max_tokens = 140"
    ],
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 40
   },
   {
    "cell_type": "code",
    "id": "92c82128-0069-4b34-860d-0a7dfb154b87",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-13T12:44:31.046183Z",
-     "start_time": "2025-09-13T12:44:25.575687Z"
+     "end_time": "2025-09-14T02:07:58.622506Z",
+     "start_time": "2025-09-14T02:07:41.562775Z"
     }
    },
    "source": [
@@ -256,7 +256,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "4e8e949779f34b959016b94f1ef7d922"
+       "model_id": "985a31d9f29f4f64bfdd25146003b35c"
       }
      },
      "metadata": {},
@@ -269,13 +269,13 @@
       "==========\n",
       "–ShawGPT: I'm glad you're finding the content helpful and enjoyable! If you have any specific questions or topics you'd like me to cover in more depth, feel free to ask. Otherwise, I'll keep providing clear and accessible explanations for all things data science. Thanks for tuning in!\n",
       "==========\n",
-      "Prompt: 121 tokens, 177.215 tokens-per-sec\n",
-      "Generation: 69 tokens, 36.989 tokens-per-sec\n",
-      "Peak memory: 4.547 GB\n"
+      "Prompt: 121 tokens, 166.311 tokens-per-sec\n",
+      "Generation: 69 tokens, 36.794 tokens-per-sec\n",
+      "Peak memory: 8.525 GB\n"
      ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 41
   },
   {
    "cell_type": "markdown",
@@ -288,8 +288,8 @@
    "id": "b3bc7a1d-a738-4da3-8707-fa50c8d2887c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-14T01:43:32.629676Z",
-     "start_time": "2025-09-14T01:43:32.622847Z"
+     "end_time": "2025-09-14T02:07:58.641964Z",
+     "start_time": "2025-09-14T02:07:58.633857Z"
     }
    },
    "source": [
@@ -330,38 +330,37 @@
     "    return set(hashes)\n"
    ],
    "outputs": [],
-   "execution_count": 19
+   "execution_count": 42
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "#### 8. Hyperparameter Sweep with Compute + Storage Deduplication\n",
+   "source": "#### 8. Training Block\n",
    "id": "2534a07eaef84164"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-14T01:26:41.247123Z",
-     "start_time": "2025-09-14T01:26:41.237327Z"
+     "end_time": "2025-09-14T02:07:58.653169Z",
+     "start_time": "2025-09-14T02:07:58.649539Z"
     }
    },
    "cell_type": "code",
    "source": [
+    "#### 8. Hyperparameter Sweep (Training Only)\n",
+    "\n",
     "num_iters = \"100\"\n",
     "steps_per_eval = \"10\"\n",
     "val_batches = \"-1\"\n",
     "num_layers = 16\n",
     "\n",
     "learning_rates = [\"1e-5\", \"5e-5\"]\n",
-    "results = []\n",
-    "prev_hashes = None\n",
     "\n",
     "for lr in learning_rates:\n",
     "    adapter_file = f\"adapters_lr{lr}.npz\"\n",
-    "    chunk_file = f\"chunks_lr{lr}.txt\"\n",
     "\n",
-    "    if os.path.exists(adapter_file) and os.path.exists(chunk_file):\n",
-    "        print(f\"Skipping fine-tuning for LR={lr}, artifacts already exist.\")\n",
+    "    if os.path.exists(adapter_file):\n",
+    "        print(f\"Skipping fine-tuning for LR={lr}, adapter already exists.\")\n",
     "    else:\n",
     "        print(f\"\\n=== Fine-tuning with LR={lr} ===\")\n",
     "\n",
@@ -379,36 +378,8 @@
     "        run_command_with_live_output(command)\n",
     "\n",
     "        # Save adapters\n",
-    "        adapter_file = f\"adapters_lr{lr}.npz\"\n",
     "        os.rename(\"adapters.npz\", adapter_file)\n",
-    "\n",
-    "        # Run FastCDC\n",
-    "        chunk_file = f\"chunks_lr{lr}.txt\"\n",
-    "        run_fastcdc(adapter_file, chunk_file)\n",
-    "\n",
-    "        # Compute Savings (CS)\n",
-    "        hits, misses = run_training_with_cache(num_iters=100, seed=42)\n",
-    "\n",
-    "        cs = hits / (hits + misses)\n",
-    "        print(f\"Compute Savings (CS): {cs:.2%} (Hits={hits}, Misses={misses})\")\n",
-    "\n",
-    "        # Deduplication Ratio (DR)\n",
-    "        hashes = load_hashes(chunk_file)\n",
-    "        if prev_hashes is not None:\n",
-    "            common = len(prev_hashes.intersection(hashes))\n",
-    "            unique_curr = len(hashes - prev_hashes)\n",
-    "            if (len(prev_hashes) + unique_curr) > 0:\n",
-    "                dr = (len(prev_hashes) + len(hashes)) / (len(prev_hashes) + unique_curr)\n",
-    "            else:\n",
-    "                dr = 1.0\n",
-    "            print(f\"Shared chunks: {common}, New unique chunks: {unique_curr}\")\n",
-    "            print(f\"Deduplication Ratio (DR): {dr:.2f}\")\n",
-    "        else:\n",
-    "            dr = 1.00\n",
-    "            print(\"Baseline run: DR = 1.00\")\n",
-    "\n",
-    "        results.append({\"lr\": lr, \"CS\": cs, \"DR\": dr})\n",
-    "        prev_hashes = hashes\n"
+    "        print(f\"✅ Saved {adapter_file}\")\n"
    ],
    "id": "7cfb50be29f5492d",
    "outputs": [
@@ -416,12 +387,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Skipping fine-tuning for LR=1e-5, artifacts already exist.\n",
-      "Skipping fine-tuning for LR=5e-5, artifacts already exist.\n"
+      "Skipping fine-tuning for LR=1e-5, adapter already exists.\n",
+      "Skipping fine-tuning for LR=5e-5, adapter already exists.\n"
      ]
     }
    ],
-   "execution_count": 13
+   "execution_count": 43
   },
   {
    "metadata": {},
@@ -432,13 +403,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-14T01:58:38.781015Z",
-     "start_time": "2025-09-14T01:58:38.723093Z"
+     "end_time": "2025-09-14T02:07:58.778792Z",
+     "start_time": "2025-09-14T02:07:58.659960Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "### Deduplication Analysis (Byte-level vs Value-level)\n",
+    "## Deduplication Analysis (on saved adapters)\n",
     "\n",
     "import numpy as np\n",
     "\n",
@@ -457,7 +428,7 @@
     "        print(f\"❌ Missing adapter file: {adapter_file}\")\n",
     "        continue\n",
     "\n",
-    "    # --- Run FastCDC again with smaller chunk sizes ---\n",
+    "    # --- Run FastCDC with smaller chunk sizes ---\n",
     "    cmd = [\n",
     "        fastcdc_path,\n",
     "        \"-file\", adapter_file,\n",
@@ -474,7 +445,7 @@
     "    cs = hits / (hits + misses) if (hits + misses) > 0 else 0.0\n",
     "    print(f\"Compute Savings (CS): {cs:.2%} (Hits={hits}, Misses={misses})\")\n",
     "\n",
-    "    # --- Byte-level Deduplication (FastCDC DR) ---\n",
+    "    # --- Byte-level Deduplication (DR) ---\n",
     "    hashes = load_hashes(chunk_file)\n",
     "    if prev_hashes is not None:\n",
     "        common = len(prev_hashes.intersection(hashes))\n",
@@ -488,7 +459,7 @@
     "        dr_byte = 1.00\n",
     "        print(\"[Byte-level] Baseline run: DR = 1.00\")\n",
     "\n",
-    "    # --- Value-level Similarity (NumPy arrays) ---\n",
+    "    # --- Value-level Similarity ---\n",
     "    with np.load(adapter_file) as arrs:\n",
     "        if prev_adapter is not None:\n",
     "            diffs = []\n",
@@ -506,7 +477,7 @@
     "    prev_hashes = hashes\n",
     "    prev_adapter = dict(np.load(adapter_file))\n",
     "\n",
-    "# --- Show Results Table ---\n",
+    "# --- Results Table ---\n",
     "import pandas as pd\n",
     "\n",
     "df = pd.DataFrame(results)\n",
@@ -522,7 +493,7 @@
       "\n",
       "=== Deduplication Analysis for LR=1e-5 ===\n",
       "✅ Re-chunked adapters_lr1e-5.npz → chunks_small_lr1e-5.txt\n",
-      "Compute Savings (CS): 100.00% (Hits=100, Misses=0)\n",
+      "Compute Savings (CS): 0.00% (Hits=0, Misses=100)\n",
       "[Byte-level] Baseline run: DR = 1.00\n",
       "[Value-level] Baseline run (no comparison).\n",
       "\n",
@@ -534,20 +505,25 @@
       "\n",
       "=== Results (Byte-level vs Value-level) ===\n",
       "  lr  CS  DR_byte  MeanDiff_val\n",
-      "1e-5 1.0      1.0      0.000000\n",
+      "1e-5 0.0      1.0      0.000000\n",
       "5e-5 1.0      1.0      0.006872\n"
      ]
     }
    ],
-   "execution_count": 27
+   "execution_count": 44
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-14T02:07:58.787132Z",
+     "start_time": "2025-09-14T02:07:58.785503Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "5933b45a6475343a"
+   "id": "5933b45a6475343a",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
