--- a/stage-tree/test.ipynb
+++ b/stage-tree/test.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Stage-Based Compute Reuse Experiment\n",
+    "\n",
+    "### Setup\n",
+    "We ran two fine-tuning trials on **Mistral-7B (LoRA)** using a stage-based execution model.\n",
+    "\n",
+    "- **Trial A:** 50 iters @ LR=1e-5 → 50 iters @ LR=5e-5\n",
+    "- **Trial B:** 50 iters @ LR=1e-5 → 50 iters @ LR=3e-5\n",
+    "\n",
+    "The StageTreeRunner cached checkpoints for stage prefixes and reused them across trials."
+   ],
+   "id": "35c739fbb45e009c"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-09-20T09:59:10.105877Z",
