--- a/stage-tree-deltaDNN/test-delta.ipynb
+++ b/stage-tree-deltaDNN/test-delta.ipynb
@@ -216,11 +216,37 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# Per-trial stage rows\n",
+    "\n",
+    "Each row is one “stage” of a trial. It is recorded: stage index, iterations, LR, how long that stage took, whether you *reused* a cached prefix (“cache_hit”), and two storage numbers inspired by DeltaDNN: the size of storing the entire adapter (“size_full”) vs. storing only the *delta* from the previous stage (“size_delta”). The derived metric `compression_ratio_full_over_delta = size_full / size_delta`.\n",
+    "\n",
+    "- **A, stage 1**\n",
+    "    `cache_hit=0` and `size_delta=0.0 B` → First stage is the *base*, so there is nothing to delta against. You must store the full adapter once (≈3.3 MB). That’s why the row shows `compression_ratio = 1.0`—full vs delta is undefined here, so you pinned it to 1.0 for the base.\n",
+    "\n",
+    "- **A, stage 2**\n",
+    "    `cache_hit=0` (built new) and `size_full≈3.3 MB`, `size_delta≈1.6 MB`.\n",
+    "    `compression_ratio ≈ 3.3 / 1.66 ≈ 1.99×`.\n",
+    "    Meaning: if you stored the raw adapter artifact for stage 2, it would be ~3.3 MB, but storing only the *difference* from stage 1 costs ~1.6 MB. That’s ~50% storage saved for this stage.\n",
+    "\n",
+    "- **B, stage 1**\n",
+    "    `cache_hit=1` with `runtime_sec = 0.000` and `size_delta=0.0 B`.\n",
+    "    This stage *reused* the cached prefix from trial A (same LR@50 iterations), so no retraining time and no new storage. That’s your stage-tree/HiPPO-style **compute reuse** in action.\n",
+    "\n",
+    "- **B, stage 2**\n",
+    "    Built new from the reused stage-1 checkpoint (`cache_hit=0` for this stage), with the same storage pattern as A’s stage 2: full ≈3.3 MB vs delta ≈1.6 MB → ~1.99× compression.\n",
+    "    Intuition: although LR differs (3e-5 vs 5e-5), the delta from the shared prefix is still about half the size of the full adapter, which is typical—later stages “nudge” weights rather than rewriting everything."
+   ],
+   "id": "f5663847e6e89251"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "ce7888bca71705f8"
+   "id": "cd8fa3c82163ccda"
   }
  ],
  "metadata": {},
