delta-dnn+stage-tree

--- a/stage-tree-deltaDNN/test-delta.ipynb
+++ b/stage-tree-deltaDNN/test-delta.ipynb
@@ -242,6 +242,50 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### Why we didn’t delta against A:stage-2\n",
+    "\n",
+    "- By design (to keep the logic simple & sound), you defined the delta base as the immediately preceding stage within the same trial. That’s a safe choice because it:\n",
+    "    - Guarantees semantic continuity (it’s literally the checkpoint you resumed from), and\n",
+    "    - Requires no global search to find “best” reference.\n",
+    "- Because of that design, B:stage-2 is not compared to A:stage-2 for delta — it’s compared to B:stage-1.\n",
+    "    - This is why A:stage-2 and B:stage-2 both show very similar delta sizes (~1.6 MB) and ratios (~1.99×): both are “one stage of 50 iterations” away from their own stage-1 base."
+   ],
+   "id": "4888251a0916f4f1"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### How compute & storage metrics align for B\n",
+    "- Compute reuse:\n",
+    "    - Across A and B you had 4 stages total (200 iterations total if all stages were trained).\n",
+    "    - Because B:stage-1 hit the cache, you trained only 3 stages (150 iterations).\n",
+    "    - Hence your summary: Saved 50 iterations (25%), speedup ≈ 1.33×.\n",
+    "- DeltaDNN storage:\n",
+    "    - For stages > 1, you would have stored two full checkpoints (A:stage-2 and B:stage-2) → ~6.5 MB.\n",
+    "    - With deltas (each against its trial’s stage-1), you stored ~3.3 MB total, giving ~1.99× aggregate compression."
+   ],
+   "id": "d5c4c7a77626c062"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "| Concept                 | HiPPO (Stage-Tree Reuse)                                                                                                   | DeltaDNN                                                                                                                         | Combined Potential                                                                                                |\n",
+    "| ----------------------- | -------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------- |\n",
+    "| **Reuse Granularity**   | Stage-level reuse: shared prefixes across hyperparameter trials (e.g., Trial B reuses Trial A’s stage 1 before branching). | Checkpoint-level reuse: reuse across epochs or neighboring hyperparameter runs via *anchor + delta*.                             | Use stage-tree to detect shared prefixes, then store checkpoints using delta encoding to cut storage cost.        |\n",
+    "| **Mechanism**           | Build a stage tree: cache checkpoints after each stage; future trials reuse the longest matching prefix.                   | Store one **anchor checkpoint** + compressed deltas to later checkpoints; reconstruct checkpoints quickly without full training. | Each stage checkpoint in the stage tree can be delta-encoded against a chosen anchor.                             |\n",
+    "| **Cross-Trial Sharing** | Explicit: trials with same early stages automatically reuse cached computation.                                            | Implicit: trials near in hyperparameters can share via *nearest-leader selection* (log-LR bucket).                               | Stage-tree provides structural reuse; DeltaDNN reduces storage/network overhead for those reused nodes.           |\n",
+    "| **Metric**              | Compute hours saved (e.g., fewer iterations trained due to reuse).                                                         | Storage compression ratio (full size ÷ delta size), plus compute saved when reconstruction suffices.                             | Joint metrics: **CS** (Compute Savings) + **DR** (Dedup Ratio) together show both compute and storage efficiency. |\n",
+    "| **Limitation**          | Still stores *full checkpoints* for each stage prefix (storage heavy if many trials).                                      | Doesn’t avoid redundant computation unless scheduler uses nearest-leader strategy.                                               | Tie together: HiPPO saves compute, DeltaDNN saves storage of reused checkpoints.                                  |\n",
+    "| **Illustration**        | Trial A (stages 1→2) cached; Trial B reuses stage 1 → only trains stage 2.                                                 | Leader run @lr=1e-5 saved fully; trial @lr=3e-5 reconstructs from delta to leader.                                               | Trial B reuses A’s stage 1 (compute) and stores stage 2 delta-encoded relative to stage 1 (storage).              |\n"
+   ],
+   "id": "1d7803cd35f8956a"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
